--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,6 +13,7 @@
     align-items: center;
     justify-content: center;
     flex-flow: column nowrap;
+    text-align: center;
   }
 
   h1 {
@@ -23,6 +24,6 @@
 </style>
 
 <h1>IS THIS TEXT RED?!?!?</h1>
-<h1>🙏 🙏 🙏 🙏 🙏</h1>
+<h1>🙏 🙏 🙏 🙏 🙏 <br /> 🙏 🙏 🙏 🙏</h1>
 
 <router-outlet></router-outlet>
