change color dynamically

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -26,4 +26,6 @@
 <h1>IS THIS TEXT RED?!?!?</h1>
 <h1>🙏 🙏 🙏 🙏 🙏 <br /> 🙏 🙏 🙏 🙏</h1>
 
+<button (click)="blue()">make it blue</button>
+
 <router-outlet></router-outlet>
